# FFmpegDemo

./: .gitignore  build.gradle
app/: build.gradle
app/src/androidTest/java/com/fdage/ffmpegdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AndroidBuf.cpp  AndroidBuf.h  CMakeLists.txt  fdageffmpeg.cpp  log.h  lxffmpeg.cpp  rtsp.cc
app/src/main/java/com/fdage/ffmpegdecode/: CommonUtil.java  Ffmpegdecoder.java  LogUtil.java
app/src/main/java/com/fdage/ffmpegdemo/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/fdage/ffmpegdemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
